@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.27 2004/04/01 18:34:27 jmmv Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2004/04/02 12:09:16 jmmv Exp $
 
 DISTNAME=		libgtop-2.5.2
 PKGNAME=		${DISTNAME:S/-/2-/}
+PKGREVISION=		1
 CATEGORIES=		sysutils gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/libgtop/2.5/}
 EXTRACT_SUFX=		.tar.bz2
@@ -35,7 +36,6 @@ PKG_FAIL_REASON+=	"(More information can be found in libgtop.info.)"
 USE_PERL5=		build
 USE_BUILDLINK3=		YES
 USE_PKGLOCALEDIR=	YES
-USE_X11=		YES
 USE_GNU_TOOLS+=		make
 USE_LIBTOOL=		YES
 PKGCONFIG_OVERRIDE=	libgtop-2.0.pc.in
@@ -53,16 +53,17 @@ TEXINFO_REQD=		4.6
 GNU_CONFIGURE=		YES
 CONFIGURE_ARGS+=	--with-glib-prefix=${BUILDLINK_PREFIX.glib2}
 CONFIGURE_ARGS+=	--with-catgets --with-libgtop-guile=no
+CONFIGURE_ARGS+=	--without-x
 CONFIGURE_ENV+=		AWK="${AWK}" LN_S="${LN} -s" PERL="${PERL5}"
 
 .if ${OPSYS} == "Linux"
 PLIST_SUBST+=	LIBGTOP_SERVER="@comment "
 .else
 PLIST_SUBST+=	LIBGTOP_SERVER=""
+.endif
 
 post-install:
 	@${CHMOD} g+s ${PREFIX}/bin/libgtop_server2
-.endif
 
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../devel/glib2/buildlink3.mk"
